syntax = "proto3";
package K8sGenie.k8s;
option go_package = "gitee.com/qiaogy91/K8sGenie/apps/k8s";

message Empty {}

enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_DEPLOYMENT = 1;
    TYPE_CRON_JOB = 2;
    TYPE_STATEFUL_SET = 3;
    TYPE_DAEMON_SET = 4;
}

message WorkLoad{
    // @gotags: json:"meta" gorm:"embedded"
    Meta meta = 1;
    // @gotags: json:"spec" gorm:"embedded"
    Spec spec = 2;
}

message Meta {
    // @gotags: json:"id"
    int64 id = 1;
    // @gotags: gorm:"autoCreateTime"
    int64 created_at = 2;
    // @gotags: gorm:"autoUpdateTime"
    int64 updated_at = 3;
}


message Spec {
    // @gotags: json:"type"
    Type type = 1;
    // @gotags: json:"namespace"
    string namespace = 2;
    // @gotags: json:"name"
    string name = 3;
    // @gotags: json:"replicas"
    int32 replicas = 4;
    // @gotags: json:"ram"
    int64 ram = 5;
    // @gotags: json:"cpu"
    int64 cpu = 6;
    // @gotags: json:"project_id"
    string project_id = 7;
}
